# TextFlow

./: .gitignore  EDA.py  README.md  download_textocr.py  pyproject.toml  requirements.txt
api/: main.py  run_inference.py
dataset/: README.md
deployment/: README.md
deployment/dagster/: Dockerfile  README.md  build_and_push.sh  dagster.yaml  entrypoint.sh
deployment/jobs/: Dockerfile  README.md  build_and_push.sh
deployment/mlflow/: Dockerfile  README.md  build_and_push.sh  docker-compose.yml  entrypoint.sh
deployment/nginx/: nginx.conf
deployment/scripts/: gpu_runner_startup.sh  service_startup.sh  submit_gpu_job.py
deployment/terraform/: README.md  backend.hcl  docker-compose.yml  docker-compose.yml.tftpl  gpu.tf  instance_startup.sh.tftpl  main.tf  mlflow_state_startup.sh.tftpl  nginx-default.conf.tftpl  outputs.tf  serial_port.txt  service.tf  variables.tf
ml/: README.md
ml/eda/: EDA.py
ml/ingest/: download_textocr.py  textocr_to_torch.py
ml/notebook/: doctr_eda.ipynb  textocr_to_torch.ipynb
ml/training/: data_drift_expt.py  detection_config.yaml  train_detection.py  train_recognition.py
model/: README.md
pipeline/: README.md  pyproject.toml
pipeline/src/pipeline/defs/: assets.py
service/: README.md
